--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: fit-content;
+  border-radius: 50px;
+  padding: 0 20px 0 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#subBtn {
+  height: fit-content;
+  margin-right: 15px;
+  background-color: white;
+  border: none;
+  font-size: 30px;
+}
+
+#plusBtn {
+  height: fit-content;
+  margin-left: 15px;
+  background-color: white;
+  border: none;
+  font-size: 30px;
+}
+
+#numberPreview {
+  height: fit-content;
+  width: 50px;
+  font-size: 20px;
+}
+
+#subBtn:focus, #plusBtn:focus{
+  outline: none;
+  cursor: pointer;
 }
